src/ui/styles/ManageInstance.css
.manage-instance-container {
    position: absolute;
    top: -6rem;
    left: -1.5rem;
    width: calc(100% + 3rem);
    height: calc(100% + 7.5rem);
    transition: all 0.3s ease-in-out;
    display: flex;
    align-items: center;
    justify-content: center;
}

.manage-instance-container:has(> .manage-instance.visible) {
    background-color: rgb(0 0 0 / 35%);
}

.manage-instance {
    opacity: 0;
    position: relative;
    width: 80%;
    height: 80%;
    transition: all 0.3s ease-in-out;
    background: var(--background-transparent);
    box-shadow: 0 0 0.4rem rgb(0 0 0 / 10%);
    backdrop-filter: blur(10px);
    border-radius: 0.5rem;
    overflow: hidden;
    transform: translateY(100%);
}

.manage-instance.visible {
    opacity: 1;
    transform: translateY(0%);
}

.manage-instance-title {
    position: absolute;
    width: 100%;
    height: 3rem;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 1.5rem;
    top: 0;
    color: var(--text-color-primary);
    background-color: var(--side-bar-color);
    box-shadow: 0 0 0.4rem rgb(0 0 0 / 10%);
    z-index: 1;
}

.manage-instance-categories {
    background-color: var(--instance-sidebar);
    height: calc(100% - 3rem);
    width: 10.2rem;
    box-shadow: 0 0 0.4rem rgb(0 0 0 / 10%);
    bottom: 0;
    display: flex;
    flex-direction: column;
    margin-right: 1.5rem;
    position: absolute;
    left: 0;
}

.manage-instance-categories .text-button {
    position: absolute;
    bottom: 1.5rem;
    margin-left: 50%;
    width: 7rem;
    transform: translateX(-50%) !important;
}

.manage-instance-categories .text-button:active {
    transform: translateX(-50%) scale(0.9) !important;
}

.instance-category {
    display: flex;
    align-items: center;
    height: 3rem;
    transition: all 0.2s ease;
    position: relative;
    color: var(--text-color-secondary);
}

.instance-category svg {
    height: 1.5rem;
    margin-left: 1rem;
    margin-right: 0.7rem;
}

.instance-category:hover {
    color: var(--text-color-primary);
    background-color: rgb(0 0 0 / 30%);
}

.instance-category:nth-child(1) {
    margin-top: 0.5rem;
}

.instance-category hr {
    position: absolute;
    bottom: -0.3rem;
    width: 0;
    margin-left: 1rem;
    background-color: var(--icons-color-hover);
    border: none;
    height: 0.1rem;
    transition: all 0.2s ease;
}

.instance-category.active hr {
    width: calc(100% - 2rem);
}

.instance-category.active svg {
    stroke: var(--icons-color-hover);
}

.backgrounds span,
.icons span {
    color: var(--text-color-primary);
}

.instance-category.active span {
    color: var(--text-color-primary);
}

.manage-instance-fields {
    position: absolute;
    left: 11.5rem;
    top: 4.3rem;
    width: calc(100% - 13rem) !important;
    height: calc(100% - 4.5rem);
}

.manage-instance-fields.appearance {
    overflow: auto;
    padding: 0.3rem;
}

.manage-instance-fields.appearance svg {
    height: 45%;
    top: 50%;
    left: 50%;
    position: absolute;
    transform: translate(-50%, -50%);
}

.instance-preview {
    display: flex;
    justify-content: center;
    height: 30%;
    max-height: 15rem;
    min-height: 8rem;
    margin-bottom: 0.7rem;
}

.manage-instance .instance {
    cursor: default;
}

.backgrounds,
.icons {
    width: 100%;
    height: 7rem;
    margin-bottom: 3rem;
}

.icons {
    height: 5rem;
}

.default-backgrounds,
.default-icons {
    margin-top: 1rem;
    height: 100%;
    width: 100%;
    overflow-x: scroll;
    overflow-y: hidden;
    display: inline-block;
    white-space: nowrap;
}

.default-background-wrapper,
.default-icon-wrapper {
    position: relative;
    height: 100%;
    background-color: var(--side-bar-color);
    aspect-ratio: 1.4 / 1;
    overflow: hidden;
    border-radius: 0.7rem;
    display: inline-block;
    margin-right: 0.5rem;
}

.default-icon-wrapper {
    background-color: transparent;
    aspect-ratio: 1 / 1;
}

.default-background-wrapper:hover,
.default-icon-wrapper:hover {
    filter: brightness(1.3);
}

.default-icon-wrapper.new {
    background-color: var(--side-bar-color);
}

.default-background,
.default-icon {
    position: absolute;
    justify-content: center;
    height: 100%;
    display: flex;
    align-items: center;
}

.default-background {
    object-fit: cover;
    width: 100%;
}

.manage-instance .version-menu {
    height: calc(100% - 5.5rem);
}

.resolution-wrapper {
    width: 100%;
    height: auto;
    max-height: 3rem;
    margin-bottom: 1.1rem;
}

.option {
    color: var(--text-color-secondary);
    font-size: 1.1rem;
    display: flex;
    align-items: center;
    transition: 0.3s;
}

.option .base-toggle {
    margin-right: 1rem;
}

.option.enabled {
    color: var(--text-color-primary);
}

